[accessibility]:Background and foreground colors do not have a sufficient contrast ratio issue fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,7 +42,7 @@ a {
 }
 .about-card{
   background-color: #316d92;
-  color: #c9d0d4;
+  color: #f2f2f2;
 }
 
 
